--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,7 +6,7 @@
   <body>
 
     <div class="container">
-      <h1>American Archaeological Database!</h1><h5><a href="/home">Go Home</a></h5>
+      <h1>American Archaeological Database</h1><h5><a href="/">Go Home</a></h5>
       
        <%= yield %>
     </div>
