redo sessions secret

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <form method="POST" action="/login">
     <label>Username/Email: </label><input type="text" name="user" placeholder="Username/Email"><br>
-    <label>Password: </label><input type="text" name="password" placeholder="Password"><br>
+    <label>Password: </label><input type="password" name="password" placeholder="Password"><br>
     <input type="submit" value="submit">
 </form>
