--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,8 @@
+<% if @error %>
+    <%= @error %>
+<% end %>
+<br><br>
+
 <form method="POST" action="/login">
     <label>Username/Email: </label><input type="text" name="user" placeholder="Username/Email"><br>
     <label>Password: </label><input type="password" name="password" placeholder="Password"><br>
