--- a/app/views/dig_sites/show.erb
+++ b/app/views/dig_sites/show.erb
@@ -1,6 +1,13 @@
-<h3>Dig Site <%= dig_site.name %></h3>
+<h3>Dig Site <%= @dig_site.name %></h3>
+    <form method="get" action="/dig_sites/<%= @dig_site.id %>/edit">
+    <input type="submit" value="Update"></form>
+    <form method="post" action="/dig_sites/#{dig_site.id}/delete">
+    <input type="hidden" name="_method" id="hidden" value="delete">
+    <input type="submit" value="Delete"></form>
+
+<h4>Units:</h4>   
 <ul>
-    <% @user.dig_sites.each do |dig_site| %>
-        <li><%= dig_site.name %>, <%= dig_site.location %></li>
+    <% @dig_site.units.each do |unit| %>
+        <li>Unit: <a href="/units/<%= unit.id %>"><%= unit.local_id %>, <%= unit.size %></a></li>
     <% end %>
 </ul>
