--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -10,6 +10,7 @@
 
 <form method="post" action="/signup">
     <label>Username: </label><input type="text" name="username" placeholder="Username"><br>
+    <label>Name: </label><input type="text" name="name" placeholder="Name"><br>
     <label>Email: </label><input type="text" name="email" placeholder="Email"><br>
     <label>Password: </label><input type="text" name="password" placeholder="Password"><br>
     <input type="submit" value="submit">
