added user update routes and forms

--- a/app/views/dig_sites/edit.erb
+++ b/app/views/dig_sites/edit.erb
@@ -3,7 +3,7 @@
 <form action="/dig_sites/<%= @dig_site.id %>" method="post">
 <input type="hidden" name="_method" id="hidden" value="patch">
 <label for="name">Dig Site Name: </label> <input type="text" name="name" id="name" placeholder="<%= @dig_site.name %>"><br>
-<label for="location">Dig Site location: </label> <input type="text" name="location" id="name" placeholder="<%= @dig_site.location %>"><br>
+<label for="location">Dig Site location: </label> <input type="text" name="location" id="location" placeholder="<%= @dig_site.location %>"><br>
 <label for="owner">Transfer Ownership? </label> <input type="text" name="owner" id="owner" placeholder="Enter new owner's name"><br>
 <input type="submit" value="Update">
 </form>
