--- a/app/views/dig_sites/index.erb
+++ b/app/views/dig_sites/index.erb
@@ -1,4 +1,4 @@
-<h3><%= @user.display_name%>'s Dig Sites</h3>
+<h3><%= @user.display_name%>'s Dig Sites:</h3>
 
 <% @user.dig_sites.each do |dig_site| %>
     <li><a href="/dig_sites/<%= dig_site.id %>"><%= dig_site.name %>, <%= dig_site.location %></a>
