--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,7 @@
         <h5><a href="/">Go Home</a>
         <% if logged_in? %> 
           | <a href="/logout">Log Out</a>
-          | <a href="/user">Account</a>
+          | <a href="/users/<%= current_user.id %>">Account</a>
         <% end %></h5>
       </div>
       <%= yield %>
