--- a/app/views/dig_sites/index.erb
+++ b/app/views/dig_sites/index.erb
@@ -3,3 +3,5 @@
 <% @user.dig_sites.each do |dig_site| %>
     <li><a href="/dig_sites/<%= dig_site.id %>"><%= dig_site.name %>, <%= dig_site.location %></a></li>
 <% end %>
+<br>
+<a href="/dig_sites/new">Create New Dig Site</a>
