added functionallity to create new dig site

--- a/app/views/dig_sites/index.erb
+++ b/app/views/dig_sites/index.erb
@@ -4,4 +4,4 @@
     <li><a href="/dig_sites/<%= dig_site.id %>"><%= dig_site.name %>, <%= dig_site.location %></a></li>
 <% end %>
 <br>
-<a href="/dig_sites/new">Create New Dig Site</a>
+<a href="/dig_site/new">Create New Dig Site</a>
