--- a/app/views/dig_sites/index.erb
+++ b/app/views/dig_sites/index.erb
@@ -1,7 +1,7 @@
 <h3><%= @user.display_name%>'s Dig Sites:</h3>
 
 <% @user.dig_sites.each do |dig_site| %>
-    <li><a href="/dig_sites/<%= dig_site.id %>"><%= dig_site.name %>, <%= dig_site.location %></a></li>
+    <li>Dig: <a href="/dig_sites/<%= dig_site.id %>"><%= dig_site.name %></a>, Location: <%= dig_site.location %></li>
 <% end %>
 <br>
-<a href="/dig_site/new">Create New Dig Site</a>
+<a href="/dig_sites/new">Create New Dig Site</a>
