--- a/app/views/dig_sites/show.erb
+++ b/app/views/dig_sites/show.erb
@@ -1,7 +1,7 @@
 <h3>Dig Site <%= @dig_site.name %></h3>
     <form method="get" action="/dig_sites/<%= @dig_site.id %>/edit">
     <input type="submit" value="Update"></form>
-    
+
     <form method="post" action="/dig_sites/<%= @dig_site.id %>">
     <input type="hidden" name="_method" id="hidden" value="delete">
     <input type="submit" value="Delete"></form>
@@ -12,3 +12,5 @@
         <li>Unit: <a href="/units/<%= unit.id %>"><%= unit.local_id %>, <%= unit.size %></a></li>
     <% end %>
 </ul>
+
+<a href="/dig_site/<%= @dig_site.id %>/units/new">Create New Unit</a>
