--- a/app/views/units/show.erb
+++ b/app/views/units/show.erb
@@ -1,7 +1,13 @@
 <h3>Unit: <%= @unit.local_id %></h3>
+
+    <% if @error %>
+        <%= @error %>
+    <% end %>
+
     <form method="get" action="/units/<%= @unit.id %>/edit">
     <input type="submit" value="Update"></form>
-    <form method="post" action="/units/<%= @unit.id %>/delete">
+
+    <form method="post" action="/units/<%= @unit.id %>">
     <input type="hidden" name="_method" id="hidden" value="delete">
     <input type="submit" value="Delete"></form>
 
