--- a/app/views/units/show.erb
+++ b/app/views/units/show.erb
@@ -17,3 +17,5 @@
         <li>Level: <a href="/levels/<%= level.id %>"><%= level.local_id %>, <%= level.beg_depth %> - <%= level.end_depth %></a></li>
     <% end %>
 </ul>
+
+<a href="/units/<%= @unit.id %>/levels/new">Create New Level</a>
