added CRUD functionallity to artifacts

--- a/app/views/levels/show.erb
+++ b/app/views/levels/show.erb
@@ -18,3 +18,5 @@
         <li>Artifact: <a href="/artifacts/<%= artifact.id %>"><%= artifact.local_id %></a></li>
     <% end %>
 </ul>
+
+<a href="/levels/<%= @level.id%>/artifacts/new">Create New Artifact</a>
