add navigation links to all show pages

--- a/app/views/dig_sites/show.erb
+++ b/app/views/dig_sites/show.erb
@@ -1,3 +1,5 @@
+<a href="/dig_sites">Dig Sites</a>
+
 <h3>Dig Site: <%= @dig_site.name %></h3>
 <h4>In: <%= @dig_site.location %></h4>
     <form method="get" action="/dig_sites/<%= @dig_site.id %>/edit">
