--- a/app/views/units/show.erb
+++ b/app/views/units/show.erb
@@ -1,3 +1,5 @@
+<a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @unit.dig_site.id%>">Units</a>
+
 <h3>Unit: <%= @unit.local_id %></h3>
 
     <% if @error %>
