add authentication and object ownership verification to all routes

--- a/app/views/dig_sites/show.erb
+++ b/app/views/dig_sites/show.erb
@@ -16,4 +16,4 @@
     <% end %>
 </ul>
 
-<a href="/dig_site/<%= @dig_site.id %>/units/new">Create New Unit</a>
+<a href="/dig_sites/<%= @dig_site.id %>/units/new">Create New Unit</a>
