--- a/app/views/artifacts/show.erb
+++ b/app/views/artifacts/show.erb
@@ -17,9 +17,9 @@
     <input type="submit" value="Delete"></form>
 
 <% if @index != 0 %>
-    <a href="/artifacts/<%= @unit.artifacts[@index - 1].id %>">Previous Artifact</a>
+    <a href="/artifacts/<%= @level.artifacts[@index - 1].id %>">Previous Artifact</a>
 <% end %>
 <% if @index != @unit.artifacts.length - 1 %>
-    <a href="/artifacts/<%= @unit.artifacts[@index + 1].id %>">Next Artifact</a>
+    <a href="/artifacts/<%= @level.artifacts[@index + 1].id %>">Next Artifact</a>
 <% end %>
 
