--- a/app/views/artifacts/show.erb
+++ b/app/views/artifacts/show.erb
@@ -19,7 +19,7 @@
 <% if @index != 0 %>
     <a href="/artifacts/<%= @level.artifacts[@index - 1].id %>">Previous Artifact</a>
 <% end %>
-<% if @index != @unit.artifacts.length - 1 %>
+<% if @index != @level.artifacts.length - 1 %>
     <a href="/artifacts/<%= @level.artifacts[@index + 1].id %>">Next Artifact</a>
 <% end %>
 
