add label to navigation links

--- a/app/views/units/show.erb
+++ b/app/views/units/show.erb
@@ -1,4 +1,4 @@
-<a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @unit.dig_site.id%>">Units</a>
+Go To: <a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @unit.dig_site.id%>">Units</a>
 
 <h3>Unit: <%= @unit.local_id %></h3>
 
