--- a/app/views/artifacts/show.erb
+++ b/app/views/artifacts/show.erb
@@ -1,4 +1,4 @@
-<a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @artifact.level.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @artifact.level.unit.id%>">Levels</a> > <a href="/levels/<%= @artifact.level.id %>">Artifacts</a>
+Go To: <a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @artifact.level.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @artifact.level.unit.id%>">Levels</a> > <a href="/levels/<%= @artifact.level.id %>">Artifacts</a>
 
 <h3>Artifact: <%= @artifact.local_id %></h3>
 
