--- a/app/views/dig_sites/show.erb
+++ b/app/views/dig_sites/show.erb
@@ -1,4 +1,4 @@
-<a href="/dig_sites">Dig Sites</a>
+Go To: <a href="/dig_sites">Dig Sites</a>
 
 <h3>Dig Site: <%= @dig_site.name %></h3>
 <h4>In: <%= @dig_site.location %></h4>
