--- a/app/views/levels/show.erb
+++ b/app/views/levels/show.erb
@@ -1,4 +1,4 @@
-<a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @level.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @level.unit.id%>">Levels</a>
+Go To: <a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @level.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @level.unit.id%>">Levels</a>
 
 <h3>Level: <%= @level.local_id %></h3>
 
