--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,14 @@
 <% if @error %>
     <%= @error %>
 <% end %>
-<br><br>
+
+
+<h3>Log In</h3>
 
 <form method="POST" action="/login">
     <label>Username/Email: </label><input type="text" name="user" placeholder="Username/Email"><br>
     <label>Password: </label><input type="password" name="password" placeholder="Password"><br>
     <input type="submit" value="submit">
-</form>
+</form><br>
+
+<a href="/signup">Create New User</a>
