--- a/app/views/dig_sites/show.erb
+++ b/app/views/dig_sites/show.erb
@@ -9,7 +9,9 @@ Go To: <a href="/dig_sites">Dig Sites</a>
     <input type="hidden" name="_method" id="hidden" value="delete">
     <input type="submit" value="Delete"></form>
     <br>
-    <a href="/dig_sites/<%= @dig_site.id %>/artifacts/index">View All Dig Site Artifacts</a>
+    <% if @dig_site.artifacts.length > 0%>
+        <a href="/dig_sites/<%= @dig_site.id %>/artifacts/index">View All Dig Site Artifacts</a>
+    <% end %>
 
 <h4>Units:</h4>   
 <ul>
