--- a/app/views/navbars/logged_out_navbar.erb
+++ b/app/views/navbars/logged_out_navbar.erb
@@ -1,4 +1,5 @@
 <div class="navbar">
+<img class="navbar-logo" src="http://www.pngmart.com/files/4/Archaeologist-Transparent-PNG.png">
     <a href="/login">Login</a>
     <a href="/signup">Signup</a>
 </div>
