--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,11 +9,13 @@
   </head>
   <body>
 
+    
+    <div class="site-header">
+      <h1 class="page-header"><img class="site-logo" src="https://www.pinclipart.com/picdir/big/294-2941144_iron-hill-archaeology-festival-set-for-may-6th.png" alt="Page Logo" title="Archaeologist searching through sifted dirt for artifacts.">American Archaeological Database</h1>
+    </div>
+    <%= render_navbar %>
+    <%= render_object_navbar(@object) %>
     <div class="container">
-      <img class="site-logo" src="https://www.pinclipart.com/picdir/big/294-2941144_iron-hill-archaeology-festival-set-for-may-6th.png">
-      <h1 class="page-header">American Archaeological Database</h1>
-      <%= render_navbar %>
-      <%= render_object_navbar(@object) %>
       <%= yield %>
     </div>
 
