--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,9 +2,9 @@ html{
     background-color: rgb(227, 204, 171);
     font-family: 'Sriracha', cursive;
 }
-body{
+/* body{
     text-align: center;
-}
+} */
 
 .navbar{
     display: flex;
@@ -12,7 +12,7 @@ body{
     align-items: center;
     border-radius: 10px;
     height: 3em;
-    background-color: rgb(191, 87, 56);
+    background-color: rgb(45, 118, 182);
     padding-right: 40px;
     padding-left: 40px;
 }
@@ -24,22 +24,29 @@ body{
 
 .object-navbar{
     align-items: left;
+    border-bottom: 1.5px solid #000;
+}
+
+.site-header{
+    display: block;
 }
 
 .page-header{
-    text-align: center;
     text-shadow: 0px 2px 10px #615a5a;
 }
 
 img.site-logo{
-    height: 200px;
-    width: 250px;
+    float: left;
+    height: 142px;
+    width: 200px;
 }
 
 .object-title{
     background-color: aqua;
-    background-size: 200px;
-    display: flex;
+    width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
     text-align: center;
 }
@@ -48,7 +55,7 @@ ul{
     padding: 15px;
     margin: 0px auto 0px auto;
     border-top: 2px solid #000;
-    text-align: center;
+    text-align: left;
 }
 
 li{
@@ -57,4 +64,7 @@ li{
     padding: 10px;
     border-left: 1px solid #000;
     border-right: 1px solid #000;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    background-color: darkgray;
 }
