--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,2 @@
-<h2>Welcome to AADB!<h2>
+<h2 class="align-center">Welcome to AADB!<h2>
+<img class="welcome-img" src="images/welcome.png" alt="Welcome Image" title="Moai from Easter Island.">
