--- a/app/views/navbars/dig_sites_navbar.erb
+++ b/app/views/navbars/dig_sites_navbar.erb
@@ -1,3 +1,3 @@
 <div class="object-navbar">
-<p>Go To: <a href="/dig_sites">Dig Sites</a></p>
+<p>Show: <a href="/dig_sites">Dig Sites</a></p>
 </div>
