--- a/app/views/navbars/levels_navbar.erb
+++ b/app/views/navbars/levels_navbar.erb
@@ -1,3 +1,3 @@
 <div class="object-navbar">
-<p>Go To: <a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @object.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @object.unit.id%>">Levels</a></p>
+<p>Show: <a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @object.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @object.unit.id%>">Levels</a></p>
 </div>
