--- a/app/views/navbars/logged_in_navbar.erb
+++ b/app/views/navbars/logged_in_navbar.erb
@@ -1,6 +1,5 @@
 <div class="navbar">
-    <img class="navbar-logo" src="http://www.pngmart.com/files/4/Archaeologist-Transparent-PNG.png">
-    <a href="/">Home</a>
-    <a href="/users/<%= current_user.id %>">Account</a>
-    <a href="/logout">Logout</a>
+    <a class="nav-links" href="/">Home</a>
+    <a class="nav-links" href="/users/<%= current_user.id %>">Account</a>
+    <a class="nav-links" href="/logout">Logout</a>
 </div>
