--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -11,6 +11,6 @@
 <label for="name">Name: </label> <input type="text" name="name" id="name" placeholder="<%= @user.display_name %>"><br>
 <label for="location">Email: </label> <input type="text" name="email" id="email" placeholder="<%= @user.email %>"><br>
 <label for="password">Update Password: </label> <input type="password" name="password" placeholder="Password"> <br>
-<label for="password">Re-enter New Password: </label> <input type="password" name="password_confirmation" placeholder="Password">
+<label for="password">Confirm New Password: </label> <input type="password" name="password_confirmation" placeholder="Re-Enter Password">
 <input type="submit" value="Update">
 </form>
