--- a/app/views/artifacts/show.erb
+++ b/app/views/artifacts/show.erb
@@ -1,23 +1,28 @@
-<h3>Artifact: <%= @artifact.local_id %></h3>
+<h3 class="object-title">Artifact: <%= @artifact.local_id %></h3>
 
-<h5>Type: <%= @artifact.artifact_type%></h5>
-<h5>Description: <%= @artifact.artifact_type%></h5>
+<div class="artifact-container">
+    <h5 class="artifact">Type: <%= @artifact.artifact_type%></h5>
+    <h5 class="artifact">Description: <%= @artifact.artifact_type%></h5>
+</div>
 
 <% if @error %>
     <%= @error %>
 <% end %>
 
-    <form method="get" action="/artifacts/<%= @artifact.id %>/edit">
+<div class="ud-container">
+    <form class="ud-buttons" method="get" action="/artifacts/<%= @artifact.id %>/edit">
     <input type="submit" value="Update"></form>
 
-    <form method="post" action="/artifacts/<%= @artifact.id %>">
+    <form class="ud-buttons" method="post" action="/artifacts/<%= @artifact.id %>">
     <input type="hidden" name="_method" id="hidden" value="delete">
     <input type="submit" value="Delete"></form><br>
-
-<% if @index != 0 %>
-    <a href="/artifacts/<%= @level.artifacts[@index - 1].id %>">Previous Artifact</a>
-<% end %>
-<% if @index != @level.artifacts.length - 1 %>
-    <a href="/artifacts/<%= @level.artifacts[@index + 1].id %>">Next Artifact</a>
-<% end %>
+</div>
+<div class="artifact-nav-container">
+    <% if @index != 0 %>
+        <a class="prev-artifact" href="/artifacts/<%= @level.artifacts[@index - 1].id %>">Previous Artifact</a>
+    <% end %>
+    <% if @index != @level.artifacts.length - 1 %>
+        <a class="next-artifact" href="/artifacts/<%= @level.artifacts[@index + 1].id %>">Next Artifact</a>
+    <% end %>
+</div>
 
