--- a/app/views/levels/show.erb
+++ b/app/views/levels/show.erb
@@ -1,22 +1,23 @@
-<h3>Level: <%= @level.local_id %></h3>
+<h3 class="object-title">Level: <%= @level.local_id %></h3>
 
     <% if @error %>
         <%= @error %>
     <% end %>
 
-    <form method="get" action="/levels/<%= @level.id %>/edit">
+<div class="ud-container">
+    <form class="ud-buttons" method="get" action="/levels/<%= @level.id %>/edit">
     <input type="submit" value="Update"></form>
 
-    <form method="post" action="/levels/<%= @level.id %>">
+    <form class="ud-buttons" method="post" action="/levels/<%= @level.id %>">
     <input type="hidden" name="_method" id="hidden" value="delete">
     <input type="submit" value="Delete"></form>
+</div>
 
-    <h4>Artifacts:</h4>
+    <h4>Artifacts: <a href="/levels/<%= @level.id%>/artifacts/new">Create New Artifact</a></h4>
 
 <ul>
     <% @level.artifacts.each do |artifact| %>
-        <li>Artifact: <a href="/artifacts/<%= artifact.id %>"><%= artifact.local_id %></a></li>
+        <li><a href="/artifacts/<%= artifact.id %>">Artifact: <%= artifact.local_id %></a></li>
     <% end %>
 </ul>
 
-<a href="/levels/<%= @level.id%>/artifacts/new">Create New Artifact</a>
