--- a/app/views/navbars/artifacts_navbar.erb
+++ b/app/views/navbars/artifacts_navbar.erb
@@ -1,3 +1,3 @@
 <div class="object-navbar">
-<p>Go To: <a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @object.level.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @object.level.unit.id%>">Levels</a> > <a href="/levels/<%= @object.level.id %>">Artifacts</a></p>
+<p>Show: <a href="/dig_sites">Dig Sites</a> > <a href="/dig_sites/<%= @object.level.unit.dig_site.id%>">Units</a> > <a href="/units/<%= @object.level.unit.id%>">Levels</a> > <a href="/levels/<%= @object.level.id %>">Artifacts</a></p>
 </div>
