--- a/app/views/artifacts/new.erb
+++ b/app/views/artifacts/new.erb
@@ -9,6 +9,7 @@
 <form action="/levels/<%= @level.id%>/artifacts/new" method="post">
     <label for="local_id">Artifact ID: </label><input type="text" name="local_id" id="local_id"><br>
     <label for="artifact_type">Type: </label><input type="text" name="artifact_type" id="artifact_type"><br>
-    <label for="description">Description: </label><input type="text" name="description" id="description"><br>
+    <label for="description">Description: </label><br>
+    <textarea name="description" id="description" rows="4" cols="40">Enter description here...</textarea><br>
     <input type="submit" value="Create Artifact">
 </form>
