--- a/app/views/dig_sites/new.erb
+++ b/app/views/dig_sites/new.erb
@@ -6,7 +6,7 @@
     <% end %>    
 <% end %>
 
-<form action="/dig_sites/new" method="post">
+<form action="/dig_sites" method="post">
     <label for="name">Name: </label><input type="text" name="name" id="name"><br>
     <label for="location">Location: </label><input type="text" name="location" id="location"><br>
     <input type="submit" value="Create Dig Site">
