--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="icon" href="/images/tab_icon.png">
     <title>AADB</title>
   </head>
   <body>
