add duplicate entries for objects validation and error displays

--- a/app/views/artifacts/edit.erb
+++ b/app/views/artifacts/edit.erb
@@ -1,5 +1,11 @@
 <h3>Artifact <%= @artifact.local_id %></h3>
 
+<% if @artifact && @artifact.errors.any? %>
+    <% @artifact.errors.full_messages.each do |message| %>
+        <p class="danger"><%= message %></p>
+    <% end %>    
+<% end %>
+
 <form action="/artifacts/<%= @artifact.id %>" method="post">
 <input type="hidden" name="_method" id="hidden" value="patch">
 <label for="local_id">Artifact ID: </label> <input type="text" name="local_id" id="local_id" placeholder="<%= @artifact.local_id %>"><br>
