--- a/app/views/levels/edit.erb
+++ b/app/views/levels/edit.erb
@@ -1,5 +1,11 @@
 <h3>Level <%= @level.local_id %></h3>
 
+<% if @level && @level.errors.any? %>
+    <% @level.errors.full_messages.each do |message| %>
+        <p class="danger"><%= message %></p>
+    <% end %>    
+<% end %>
+
 <form action="/levels/<%= @level.id %>" method="post">
 <input type="hidden" name="_method" id="hidden" value="patch">
 <label for="local_id">Level ID: </label> <input type="text" name="local_id" id="local_id" placeholder="<%= @level.local_id %>"><br>
