--- a/app/views/units/edit.erb
+++ b/app/views/units/edit.erb
@@ -1,5 +1,11 @@
 <h3>Unit <%= @unit.local_id %></h3>
 
+<% if @unit && @unit.errors.any? %>
+    <% @unit.errors.full_messages.each do |message| %>
+        <p class="danger"><%= message %></p>
+    <% end %>    
+<% end %>
+
 <form action="/units/<%= @unit.id %>" method="post">
 <input type="hidden" name="_method" id="hidden" value="patch">
 <label for="local_id">Unit ID: </label> <input type="text" name="local_id" id="local_id" placeholder="<%= @unit.local_id %>"><br>
