update levels show page

--- a/app/views/levels/show.erb
+++ b/app/views/levels/show.erb
@@ -1,4 +1,4 @@
-<h3 class="object-title">Level: <%= @level.local_id %></h3>
+<h3 class="object-title">Dig Site: <%= @level.unit.dig_site.name %>, Unit: <%= @level.unit.local_id %> <br> Level: <%= @level.local_id %></h3>
 
     <% if @error %>
         <%= @error %>
