--- a/app/views/units/show.erb
+++ b/app/views/units/show.erb
@@ -1,4 +1,4 @@
-<h3 class="object-title">Unit: <%= @unit.local_id %></h3>
+<h3 class="object-title">Dig Site: <%= @unit.dig_site.name %> <br> Unit: <%= @unit.local_id %></h3>
 
     <% if @error %>
         <%= @error %>
