--- a/app/views/artifacts/index.erb
+++ b/app/views/artifacts/index.erb
@@ -4,7 +4,7 @@
 
 <ul>
 <% @artifacts.each do |artifact| %>
-    <li><p>ID: <%= artifact.local_id %></p> <p>Type: <%= artifact.artifact_type %></p> <p>Desc: <%= artifact.description %></p> <p>Location: Unit <%= artifact.level.unit.id %> - Level <%= artifact.level.id %></p> </li>
+    <li><p>Found: <%= artifact.created_at%></p> <p>ID: <%= artifact.local_id %></p> <p>Type: <%= artifact.artifact_type %></p> <p>Desc: <%= artifact.description %></p> <p>Location: Unit <%= artifact.level.unit.id %> - Level <%= artifact.level.id %></p> </li>
 <% end %>
 </ul>
 
